# near-abi-rs

./: .gitmodules  Cargo.toml
examples/adder/: Cargo.toml  build.rs
examples/adder/src/: adder-metadata.json  lib.rs
schemafy-near/: Cargo.toml  build.rs
schemafy-near/schemafy_lib/: Cargo.toml
schemafy-near/schemafy_lib/src/: generator.rs  lib.rs
schemafy-near/src/: lib.rs
src/: lib.rs
tests/: adder-metadata.json
