[package]
name = "adder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
near-account-id = "0.12.0"
near-crypto = "0.12.0"
near-primitives = "0.12.0"
near-sdk = { path = "../../near-sdk-rs/near-sdk" }
near-abi-rs = { path = "../.." }
serde_json = "1.0"
serde = "1.0"
tokio = { version = "1.14", features = ["full"] }
tracing = "0.1"
workspaces = "0.3.0"

[dev-dependencies]
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0"
near-abi-rs = { path = "../.." }
